index page created

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.4.11",
+    "nuxt-icon": "^0.4.2",
+    "nuxt-swiper": "^1.1.1",
     "pinia": "^2.1.4",
     "sass": "^1.63.6"
   }
